--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,12 +39,12 @@ nfpms:
     maintainer: Johan Lindell <johan@lindell.me>
     license: Apache-2.0
     contents:
-      - src: ./completions/connect-iq-manager.bash
-        dst: /etc/bash_completion.d/connect-iq-manager
-      - src: ./completions/connect-iq-manager.fish
-        dst: /usr/share/fish/completions/connect-iq-manager.fish
-      - src: ./completions/connect-iq-manager.zsh
-        dst: /usr/local/share/zsh/site-functions/_connect-iq-manager
+      - src: ./completions/connect-iq-sdk-manager.bash
+        dst: /etc/bash_completion.d/connect-iq-sdk-manager
+      - src: ./completions/connect-iq-sdk-manager.fish
+        dst: /usr/share/fish/completions/connect-iq-sdk-manager.fish
+      - src: ./completions/connect-iq-sdk-manager.zsh
+        dst: /usr/local/share/zsh/site-functions/_connect-iq-sdk-manager
     formats:
     - deb
     - rpm
@@ -61,22 +61,22 @@ changelog:
       - "^docs:"
       - "^test:"
 brews:
-  - name: connect-iq-manager
+  - name: connect-iq-sdk-manager-cli
     repository:
       owner: lindell
-      name: homebrew-connect-iq-manager
+      name: homebrew-connect-iq-sdk-manager-cli
     goarm: 6
     commit_author:
       name: Johan Lindell
       email: johan@lindell.me
     description: CLI to download connectIQ resources
-    homepage: https://github.com/lindell/connect-iq-manager
+    homepage: https://github.com/lindell/connect-iq-sdk-manager-cli
     license: "Apache-2.0"
     folder: Formula
     install: |-
-      bin.install "connect-iq-manager"
-      bash_completion.install "completions/connect-iq-manager.bash" => "connect-iq-manager"
-      zsh_completion.install "completions/connect-iq-manager.zsh" => "_connect-iq-manager"
-      fish_completion.install "completions/connect-iq-manager.fish"
+      bin.install "connect-iq-sdk-manager"
+      bash_completion.install "completions/connect-iq-sdk-manager.bash" => "connect-iq-sdk-manager"
+      zsh_completion.install "completions/connect-iq-sdk-manager.zsh" => "_connect-iq-sdk-manager"
+      fish_completion.install "completions/connect-iq-sdk-manager.fish"
     test: |
-      system "#{bin}/connect-iq-manager", "version"
+      system "#{bin}/connect-iq-sdk-manager", "version"
