--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-latest
+          # - macos-latest
           - ubuntu-latest
           - windows-latest
     steps:
@@ -20,6 +20,9 @@ jobs:
           go-version: "^1.15.5"
 
       - name: Test
+        env:
+          TEST_GARMIN_USERNAME: ${{ secrets.TEST_GARMIN_USERNAME }}
+          TEST_GARMIN_PASSWORD: ${{ secrets.TEST_GARMIN_PASSWORD }}
         run: go test ./... -v
 
       - name: Build
