--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,10 @@ name: release
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # needed for release-please
+      issues: write # needed for github-release-commenter
+      pull-requests: write # needed for release-please and github-release-commenter
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v3.7.10
         id: release
