--- a/.github/workflows/gorelease-check.yaml
+++ b/.github/workflows/gorelease-check.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-go@v5
 
       - name: Check GoReleaser config
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v7
         with:
-          version: latest
+          version: '~> v2'
           args: check
